--- a/drupal/web/themes/custom/bearcom/css/components/_product-card.css
+++ b/drupal/web/themes/custom/bearcom/css/components/_product-card.css
@@ -88,7 +88,8 @@
 /* Responsive — Mobile */
 @media (max-width: 767px) {
   .product-card__image {
-    height: 200px;
+    height: 186px;
+    margin-bottom: 10px;
   }
 
   .product-card__image img {
